--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
 sentence-transformers==2.2.2
-langchain
-flask
-pypdf
-python-dotenv
-pinecone[grpc]
-langchain-pinecone
+langchain==0.3.25
+langchain-core==0.3.58
+langchain-google-genai==2.1.4
 langchain_community
-langchain_openai
-langchain_experimental
+streamlit
+faiss-cpu
